# SchnoseAPI

./: .env.example  .gitignore  .rustfmt.toml  Cargo.toml
api/: .gitignore  Cargo.toml  config.toml.example
api/src/: main.rs  ser_date.rs  util.rs
api/src/models/: error.rs  maps.rs  mod.rs  modes.rs  players.rs  records.rs  response.rs  servers.rs
api/src/routes/: index.rs  mod.rs  twitch_info.rs
api/src/routes/maps/: filters.rs  id.rs  ident.rs  index.rs  mod.rs  name.rs
api/src/routes/modes/: id.rs  ident.rs  index.rs  mod.rs  name.rs
api/src/routes/modes/maps/: id.rs  mod.rs  name.rs
api/src/routes/players/: completion.rs  id.rs  ident.rs  index.rs  mod.rs  name.rs
api/src/routes/records/: id.rs  index.rs  index.txt  map.rs  maptop.rs  maptop.txt  mod.rs  place.rs  player.rs  recent.rs  world_records.rs
api/src/routes/servers/: id.rs  ident.rs  index.rs  mod.rs  name.rs
api_scraper/: .gitignore  Cargo.toml
api_scraper/src/: lib.rs  main.rs  output.rs
api_scraper/src/maps/: mod.rs
api_scraper/src/modes/: mod.rs
api_scraper/src/players/: mod.rs
api_scraper/src/records/: mod.rs
api_scraper/src/servers/: mod.rs
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/models/: error.rs  maps.rs  mod.rs  players.rs  records.rs  servers.rs
backend/src/routes/: mod.rs
backend/src/routes/maps/: get_by_identifier.rs  get_index.rs
backend/src/routes/modes/: get_by_identifier.rs  get_index.rs  mod.rs
backend/src/routes/players/: get_by_identifier.rs  get_index.rs  mod.rs
backend/src/routes/records/: get_by_id.rs  get_index.rs  get_top.rs  mod.rs
backend/src/routes/servers/: get_by_identifier.rs  get_index.rs
configs/: .gitignore  backend.toml.example  fetching_elastic.toml.example  schnosedb.toml.example
crates/elastic_fetching/: Cargo.toml
crates/elastic_fetching/src/: main.rs
crates/global_api_fetching/: Cargo.toml
crates/global_api_fetching/src/: main.rs  modes.rs  players.rs
crates/global_api_scraper/: Cargo.toml
crates/global_api_scraper/src/: main.rs
crates/migrations/: Cargo.toml
crates/migrations/src/: main.rs
crates/migrations/src/migrations/: mod.rs  up.rs
crates/migrations/src/migrations/schemas/: mappers.rs  maps.rs  mod.rs  players.rs
crates/scraper/: Cargo.toml
crates/scraper/src/: main.rs
crates/split_json_records/: Cargo.toml
database/: Cargo.toml
database/src/: insert.rs  lib.rs  schemas.rs  select.rs
database/src/crd/: create.rs  mod.rs  read.rs
database/src/schemas/: mod.rs  raw.rs
elastic_migrations/: Cargo.toml  config.toml.example
elastic_migrations/src/: main.rs
fetching/elastic/: Cargo.toml
fetching/elastic/src/: main.rs
fetching/global_api/: Cargo.toml
fetching/global_api/src/: main.rs  maps.rs  records.rs  servers.rs
migrations/: 20230205_maprelease.sql  20230312_maprelease.sql  Cargo.toml
migrations/sql/: .gitignore  create_db.sql
migrations/src/: main.rs
migrations/src/maps/: mod.rs
migrations/src/modes/: mod.rs
migrations/src/players/: mod.rs
migrations/src/records/: mod.rs
migrations/src/servers/: mod.rs
schnosedb/: Cargo.toml
schnosedb/src/: main.rs
schnosedb/src/migrations/: down.rs  mod.rs  util.rs
schnosedb/src/migrations/schemas/: courses.rs  maps.rs  mod.rs  modes.rs  players.rs  records.rs  servers.rs
scraper/: Cargo.toml
scraper/src/: main.rs
scripts/ban_scraper/: Cargo.toml
scripts/ban_scraper/src/: main.rs
scripts/elastic_dump/: .gitignore  dump.sh  package.json
scripts/fetch_maps/: Cargo.toml
scripts/fetch_maps/src/: main.rs
scripts/filter_json/: Cargo.toml
scripts/filter_json/src/: main.rs
scripts/record_scraper/: Cargo.toml
scripts/record_scraper/src/: main.rs
scripts/split_json_records/src/: main.rs
split_files/: Cargo.toml
split_files/src/: main.rs
