[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
# error handling
color-eyre = { workspace = true }

# logging
log = { workspace = true }
env_logger = { workspace = true }

# CLI
clap = { workspace = true }

# parsing
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# time
chrono = { workspace = true }

# GOKZ
gokz_rs = { workspace = true }

# async runtime
tokio = { workspace = true }

# SQL
sqlx = { workspace = true }
database = { path = "../database" }

# axum
axum = "0.6"
axum-extra = "0.4"
axum-macros = "0.3.4"
tower = { version = "0.4", features = ["limit", "buffer"] }
