[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = { workspace = true }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
time = "0.3"

clap = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }

gokz_rs = { workspace = true }

tokio = { workspace = true }

sqlx = { workspace = true }
database = { path = "../database" }

axum = { version = "0.6", features = ["macros"] }
tower-http = { version = "0.4", default-features = false, features = ["trace"] }
