[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

clap = { workspace = true }

serde = { workspace = true }
chrono = { workspace = true }

gokz_rs = { workspace = true }

sqlx = { workspace = true }
