[package]
name = "migrations"
version = "0.1.0"
edition = "2021"

[dependencies]
# error handling
color-eyre = { workspace = true }

# logging
log = { workspace = true }
env_logger = { workspace = true }

# CLI
clap = { workspace = true }

# parsing
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# time
chrono = { workspace = true }

# GOKZ
gokz_rs = { workspace = true }

# async runtime
tokio = { workspace = true }

# SQL
sqlx = { workspace = true }

api_scraper = { path = "../api_scraper" }
