[package]
name = "elastic_fetching"
version = "0.1.0"
edition = "2021"

[dependencies]
# error handling
color-eyre = { workspace = true }

# logging
log = { workspace = true }
env_logger = { workspace = true }

# CLI
clap = { workspace = true }
ctrlc = "3"

# parsing
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# time
chrono = "0.4"

# GOKZ
gokz_rs = { workspace = true }

# async runtime
tokio = { workspace = true }

# elastic
elasticsearch = "8.5.0-alpha.1"
