[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

clap = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }

gokz_rs = { workspace = true }

tokio = { workspace = true }

sqlx = { workspace = true }
database = { path = "../../database" }
