[package]
name = "fetch_maps"
version = "0.1.0"
edition = "2021"

[dependencies]
# error handling
color-eyre = { workspace = true }

# logging
log = { workspace = true }
env_logger = { workspace = true }

# CLI
clap = { workspace = true }

# parsing
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# GOKZ
gokz_rs = "0.15"

# async runtime
tokio = { workspace = true }
